syntax = "proto2";

option java_multiple_files = true;
option java_package = "io.grpc.examples.referral";
option java_outer_classname = "ReferralProto";

package referral;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  required string name = 1;
}

// The response message containing the greetings
message HelloReply {
  required string message = 1;
}